RESOLVED FIXED107354
Fix bug that caused pages with fixed backgrounds to not be fast scrollable
https://bugs.webkit.org/show_bug.cgi?id=107354
Summary Fix bug that caused pages with fixed backgrounds to not be fast scrollable
Simon Fraser (smfr)
Reported 2013-01-18 20:34:35 PST
Fix bug that caused pages with fixed backgrounds to not be fast scrollable
Attachments
Patch (9.89 KB, patch)
2013-01-18 20:40 PST, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2013-01-18 20:40:01 PST
Simon Fraser (smfr)
Comment 2 2013-01-20 13:03:19 PST
Note You need to log in before you can comment on or make changes to this bug.