Fix bug that caused pages with fixed backgrounds to not be fast scrollable https://bugs.webkit.org/show_bug.cgi?id=107354

Reviewed by Sam Weinig.

Source/WebCore:

Correct the change to RenderObject::styleWillChange() made in r140223. This
condition is checking that we're painting the root background, so it checks if
the renderer is the root, or if it's the body, and the document element's renderer
has no background (which means that the body's background propagates to the root).

* rendering/RenderObject.cpp:
(WebCore::RenderObject::styleWillChange):

LayoutTests:

* platform/mac/tiled-drawing/fixed-background/fixed-body-background-body-layer-expected.txt:
* platform/mac/tiled-drawing/fixed-background/fixed-body-background-expected.txt:
* platform/mac/tiled-drawing/fixed-background/fixed-body-background-opacity-html-expected.txt:
* platform/mac/tiled-drawing/fixed-background/fixed-body-background-positioned-expected.txt:
* platform/mac/tiled-drawing/fixed-background/fixed-body-background-transformed-html-expected.txt:
* platform/mac/tiled-drawing/fixed-background/fixed-body-background-zoomed-expected.txt:
* platform/mac/tiled-drawing/fixed-background/fixed-non-propagated-body-background-expected.txt:

Canonical link: https://commits.webkit.org/125587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140233 268f45cc-cd09-0410-ab3c-d52691b4dbfc